--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -67,9 +67,21 @@
       }
     }
   }
+  .panel-collapse {
+    background-color: #EFEFEF;
+
+    .panel-body {
+      text-align: left;
+      background-color: #EFEFEF !important;
+    }
+  }
+}
+
+.panel-profile-board {
+  border-color: #CBCBCB;
 
   .panel-body {
-    background-color: #EFEFEF;
+    background-color: #ffffff;
     text-align: left;
 
     .content-inner {
@@ -109,8 +121,12 @@
           line-height: 24px;
           color: #000000;
           font-weight: 700;
+          padding: 0;
         }
       }
+    }
+    p {
+      padding: 0 1rem;
     }
   }
 }
