--- a/www-root/includes/content-types-main/test-html-updates/department-page-refresh-contact.html
+++ b/www-root/includes/content-types-main/test-html-updates/department-page-refresh-contact.html
@@ -1,3 +1,30 @@
+<div class="col-xs-12">
+  <div class="panel panel-default panel-profile-board">
+    <div class="panel-body">
+      <div class="content-inner">
+        <div class="content-img">
+          <img src='https://adt4apps.msudenver.edu/media/marketingandcommunications/academicprograms/images/Journalism_BA-Baum_Michelle-Chase.jpg' alt='Michelle Chase Baum_Journalism' style=''/>
+        </div>
+
+        <div class="content-words">
+          <h3>Marissa Molina</h3>
+          <h4>Trustee</h4>
+
+          <hr>
+
+          <p>Marissa Molina was appointed to the MSU Denver Board of
+            Trustees in 2019.</p>
+          <p>She is the chair of the Governance Committee. Marissa also
+            serves on the Finance Committee and is the MSU Denver
+            representative to the MSU Denver Foundation Board.</p>
+        </div>
+      </div>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi turpis, ultricies eu tortor quis, suscipit tempor leo. Nunc eget sem vestibulum, volutpat lorem ac, vehicula nibh. Vivamus ut luctus lacus. Aliquam fermentum in nulla eu ornare. Integer at tellus pharetra, fermentum quam vitae, bibendum nibh. Mauris aliquam sagittis nisl malesuada tempus. Aenean vulputate id lorem nec congue. Nunc in imperdiet eros. Nam gravida vel sem imperdiet dictum. Nam elementum urna sit amet tristique molestie. Duis mattis vel est vitae iaculis. Vestibulum auctor condimentum lobortis. Integer id justo fermentum est ornare lacinia quis et quam. Curabitur convallis efficitur ex id posuere.</p>
+    </div>
+  </div>
+</div>
+
 <div class="col-xs-12 contact-form content-inner">
   <h2>
     Interested in Our Program?
