--- a/development/terminalfour/src/html/includes/content-types-main/video-hero.html
+++ b/development/terminalfour/src/html/includes/content-types-main/video-hero.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12 hero">
         <video class="video-responsive" muted='true' loop='true' autoplay='true'>
-            <source src="http://127.0.0.1:8887/Drone_for_web_2.mp4" type='video/mp4'/>
+            <source src="https://www.msudenver.edu/media/marketingandcommunications/strategicplan2025/Drone_for_web_2.mp4" type='video/mp4'/>
         </video>
         <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
             <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
