--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -1,16 +1,14 @@
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .well{
-  background:#fff;
+  .well {
+    background: #fff;
   }
-
 }
-
 
 html {
   scroll-behavior: smooth;
   animation-delay: 10s;
-    -webkit-animation-delay: 10s;
-    -moz-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
+  -moz-animation-delay: 10s;
 }
 
 body {
@@ -18,90 +16,84 @@ body {
   font-family: 'Gotham A', 'Gotham B', sans-serif;
 }
 
- h1,h2,h3,p{
-    color:#00366A;
-    font-weight: 400;
-  }
-  h2{
-    font-size: 1.75rem;
-    margin: 10px 0px;
-    font-weight: 700;
-  }
-  p {
-    font-size: 1rem;
-  }
+h1,
+h2,
+h3,
+p {
+  color: #00366A;
+  font-weight: 400;
+}
 
-  p.copyright {
-    font-size: 16px;
-    text-align:right;
-  }
+h2 {
+  font-size: 1.75rem;
+  margin: 10px 0;
+  font-weight: 700;
+}
 
-.copyright>a{
-    color:#00366A;
-  }
+p {
+  font-size: 1rem;
+}
 
+p.copyright {
+  font-size: 16px;
+  text-align: right;
+}
 
-
+.copyright > a {
+  color: #00366A;
+}
 
 section {
   padding-top: 15vh;
   padding-bottom: 15vh;
   height: auto;
-
 }
 
 .introduction {
   height: 100vh;
-  padding-top:35vh;
+  padding-top: 35vh;
 
-  h1  {
+  h1 {
     font-size: 3rem;
     color: #00447c;
     text-align: center;
     font-weight: 700;
   }
-
-
-
-
 }
 
-.possible-indicator{
+.possible-indicator {
   color: #00447c;
   // display:block;
-  width:100px;
+  width: 100px;
   height: 100%;
   // margin: 0 auto;
   position: relative;
-    top: 10vh;
+  top: 10vh;
 }
 
-.university-logo{
+.university-logo {
   width: 200px;
-  text-align:center;
+  text-align: center;
   margin-top: 10vh;
   text-align: center!important;
 }
 
-
-
-
 .possible-word {
-        color: white;
-        background: #D11242;
-        padding: 0px 12px 5px 12px;
-        letter-spacing: 3.5px;
-    }
+  color: white;
+  background: #D11242;
+  padding: 0 12px 5px;
+  letter-spacing: 3.5px;
+}
 
 .possible-word-reversed {
-            color: #D11242;
-            background: #fff;
-            margin-right: 5px;
-            padding: 0px 12px 5px 12px;
-        }
+  color: #D11242;
+  background: #fff;
+  margin-right: 5px;
+  padding: 0 12px 5px;
+}
 
-.start_your_possible{
-  background-color:#D11242;
+.start_your_possible {
+  background-color: #D11242;
   padding-top: 15vh;
   padding-bottom: 15vh;
   height: auto;
@@ -113,122 +105,140 @@ section {
   -o-background-size: cover;
   background-size: cover;
 
-
-  h2{
-    margin: 15px 0px;
-    color:#fff;
-
+  h2 {
+    margin: 15px 0;
+    color: #fff;
   }
+
   p {
     color: #fff;
   }
 }
+button, [type="button"],// 1
 
-button,
-[type="button"], // 1
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: none; // 2
 }
 
-.card-possible{
-  color: white;
-  background-color:#D11242;
-  padding:50px 15px;
-  margin:15px 0px;
+.card-possible {
+  // color: white;
+  background-color: #D11242;
+  padding: 50px 15px;
+  margin: 15px 0;
+  transition: transform 0.4s;
+  border: 1px #D11242 solid;
   // height:20vh;
-
-  p{color: white;}
+  p {
+    color: white;
+    transition: transform 0.4s;
+  }
 }
 
-#possible-card-1 > .modal-dialog{
-  background: url(../media/possible/Tivoli.jpg) no-repeat center center;
-    height: auto;
+.card-possible:hover {
+  // color: #D11242;
+  background-color: #fff;
+  border: 1px #D11242 solid;
+
+  p {
+    color: #D11242;
+    // transform: scale(1.1);
+  }
+}
+
+#possible-card-1 > .modal-dialog {
+  // background: url(../media/possible/Tivoli.jpg) no-repeat center center;
+  // height: auto;
 }
 
 .modal-content {
-    background-color: #ffffffde;
-    background-clip: padding-box;
-    margin: 50px;
-    padding: 25px 30px;
+  background-color: #ffffffde;
+  background-clip: padding-box;
+  margin: 50px;
+  padding: 25px 30px;
+  border-radius: 0;
 
-    p{
-      font-size:1.2rem;
-    }
-    .btn{
-      padding:10px;
-    }
-    .btn:hover{
-      padding:10px;
-    }
+  h3 {
+    font-size: 2.2rem;
+    font-weight: 700;
+  }
+
+  h4{
+    color:#00447c;
+    margin-bottom:15px;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
+
+  .img-thumbnail {
+    margin-left: 15px;
+  }
+
+  .btn {
+    padding: 10px;
+  }
+
+  .btn:hover {
+    padding: 10px;
+  }
 }
 
-
 .btn {
-    border: solid 3px #00447c;
-    padding: 20px;
-    color:#00447c;
-    font-size: 1rem;
-    border-radius: 0px;
-    margin-top:15px;
-    margin-bottom:15px;
-
+  border: solid 3px #00447c;
+  padding: 20px;
+  color: #00447c;
+  font-size: 1rem;
+  border-radius: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .btn:hover {
-    border: solid 3px #00447c;
-    padding: 20px;
-    color:#fff;
-    font-size: 1rem;
-    border-radius: 0px;
-    background:#00447c;
+  border: solid 3px #00447c;
+  padding: 20px;
+  color: #fff;
+  font-size: 1rem;
+  border-radius: 0;
+  background: #00447c;
 }
 
 .possible-call-to-action {
-  background: url(../media/possible/open-house-student.jpg) no-repeat center center fixed;
-    display: table;
-    height: auto;
-    position: relative;
-    width: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  background: url("../media/possible/open-house-student.jpg") no-repeat center center fixed;
+  display: table;
+  height: auto;
+  position: relative;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
-.well{
-background:#ffffffde;
-padding:25px 30px;
-margin-top:15vh;
-margin-bottom:15vh;
-
+  .well {
+    background: #ffffffde;
+    padding: 25px 30px;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
+  }
 }
 
-
-
-
-}
-
-.footer{
+.footer {
   color: #00366A;
-  background-color:#fff;
+  background-color: #fff;
   margin-top: 5vh;
-  margin-bottom:5vh;
+  margin-bottom: 5vh;
 
-
-  .possible-footer{
+  .possible-footer {
     font-size: 3rem;
     font-weight: 700;
     text-align: center;
     margin-bottom: 25px;
-
   }
 
-  .university-logo-footer{
+  .university-logo-footer {
     width: 260px;
   }
-
 }
-
-
 @import "possible-partials/possible-viewport-overrides.scss";
 @import "possible-partials/possible-animations.scss";
