--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -15,14 +15,17 @@ body {
   font-family: 'Gotham A', 'Gotham B', sans-serif;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   color: #00366A;
   font-weight: 400;
 }
 
 h2 {
   font-size: 1.75rem;
-  margin: 10px 0px;
+  margin: 10px 0;
   font-weight: 700;
 }
 
@@ -74,7 +77,7 @@ section {
 .possible-word {
   color: white;
   background: #D11242;
-  padding: 0px 12px 5px 12px;
+  padding: 0 12px 5px;
   letter-spacing: 3.5px;
 }
 
@@ -82,7 +85,7 @@ section {
   color: #D11242;
   background: #fff;
   margin-right: 5px;
-  padding: 0px 12px 5px 12px;
+  padding: 0 12px 5px;
 }
 
 .start_your_possible {
@@ -99,33 +102,37 @@ section {
   background-size: cover;
 }
 .start_your_possible h2 {
-  margin: 15px 0px;
+  margin: 15px 0;
   color: #fff;
 }
 .start_your_possible p {
   color: #fff;
 }
 
-button,
-[type="button"],
+button, [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: none;
 }
 
 .card-possible {
-  color: white;
   background-color: #D11242;
   padding: 50px 15px;
-  margin: 15px 0px;
+  margin: 15px 0;
+  transition: transform 0.4s;
+  border: 1px #D11242 solid;
 }
 .card-possible p {
   color: white;
+  transition: transform 0.4s;
 }
 
-#possible-card-1 > .modal-dialog {
-  background: url(../media/possible/Tivoli.jpg) no-repeat center center;
-  height: auto;
+.card-possible:hover {
+  background-color: #fff;
+  border: 1px #D11242 solid;
+}
+.card-possible:hover p {
+  color: #D11242;
 }
 
 .modal-content {
@@ -133,9 +140,21 @@ button,
   background-clip: padding-box;
   margin: 50px;
   padding: 25px 30px;
+  border-radius: 0;
+}
+.modal-content h3 {
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+.modal-content h4 {
+  color: #00447c;
+  margin-bottom: 15px;
 }
 .modal-content p {
   font-size: 1.2rem;
+}
+.modal-content .img-thumbnail {
+  margin-left: 15px;
 }
 .modal-content .btn {
   padding: 10px;
@@ -149,7 +168,7 @@ button,
   padding: 20px;
   color: #00447c;
   font-size: 1rem;
-  border-radius: 0px;
+  border-radius: 0;
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -159,12 +178,12 @@ button,
   padding: 20px;
   color: #fff;
   font-size: 1rem;
-  border-radius: 0px;
+  border-radius: 0;
   background: #00447c;
 }
 
 .possible-call-to-action {
-  background: url(../media/possible/open-house-student.jpg) no-repeat center center fixed;
+  background: url("../media/possible/open-house-student.jpg") no-repeat center center fixed;
   display: table;
   height: auto;
   position: relative;
