adds lg viewport and fixes modal width on mbl and deskt

--- a/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-viewport-overrides.scss
@@ -1,6 +1,12 @@
+@media only screen and (max-width: 543px) {
+  .modal-dialog {
+      max-width: 100vw;
+  }
+}
+
 @media only screen and (min-width: 544px) {
   .modal-dialog {
-      max-width: 80vw;
+      max-width: 90vw;
   }
 
   .possible-word {
