--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -154,7 +154,7 @@ button, [type="button"],// 1
 .modal-content {
   background-color: #ffffffde;
   background-clip: padding-box;
-  margin: 50px;
+  // margin: 50px;
   padding: 25px 30px;
   border-radius: 0;
 
