--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -138,7 +138,6 @@ button, [type="button"],
 .modal-content {
   background-color: #ffffffde;
   background-clip: padding-box;
-  margin: 50px;
   padding: 25px 30px;
   border-radius: 0;
 }
@@ -216,9 +215,14 @@ button, [type="button"],
   width: 260px;
 }
 
+@media only screen and (max-width: 543px) {
+  .modal-dialog {
+    max-width: 100vw;
+  }
+}
 @media only screen and (min-width: 544px) {
   .modal-dialog {
-    max-width: 80vw;
+    max-width: 90vw;
   }
 
   .possible-word {
