--- a/development/terminalfour/src/html/includes/possible/card-possible.html
+++ b/development/terminalfour/src/html/includes/possible/card-possible.html
@@ -1,71 +1,15 @@
 <section class="statements">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-1">
           <p>What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible" type="button" data-toggle="modal" data-target="#possible-card-2">
+      <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="card-possible-reversed" type="button" data-toggle="modal" data-target="#possible-card-2">
           <p>MSU Denver is where learners connect with leaders.</p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>4 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible-reversed">
-          <p>A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.</p>
-          <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-1">Learn More </button>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible-reversed">
-          <p>99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.</p>
           <button class="btn" type="button" data-toggle="modal" data-target="#possible-card-2">Learn More </button>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>5 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>6 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>7 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>8 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-possible">
-          <p>9 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 offset-md-4">
-        <div class="card-possible">
-          <p>10 What’s <span class="possible-word-reversed">possible</span> when you reimagine higher education? </p>
         </div>
       </div>
     </div>
