--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -18,6 +18,7 @@ body {
 h1,
 h2,
 h3,
+h4,
 p {
   color: #00366A;
   font-weight: 400;
@@ -27,6 +28,11 @@ h2 {
   font-size: 1.75rem;
   margin: 10px 0;
   font-weight: 700;
+}
+
+h4 {
+  color: #00447c;
+  margin-bottom: 15px;
 }
 
 p {
@@ -152,10 +158,6 @@ button, [type="button"],
   font-size: 2.2rem;
   font-weight: 700;
 }
-.modal-content h4 {
-  color: #00447c;
-  margin-bottom: 15px;
-}
 .modal-content p {
   font-size: 1.2rem;
 }
@@ -201,6 +203,24 @@ button, [type="button"],
 }
 .possible-call-to-action .well {
   background: #ffffffde;
+  padding: 25px 30px;
+  margin-top: 15vh;
+  margin-bottom: 15vh;
+}
+
+.background-right-copy {
+  background: url("../media/possible/Tivoli.jpg") no-repeat center center fixed;
+  display: table;
+  height: auto;
+  position: relative;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.background-right-copy .well {
+  background: #fff;
   padding: 25px 30px;
   margin-top: 15vh;
   margin-bottom: 15vh;
