--- a/development/terminalfour/src/html/includes/possible/master-your-future.html
+++ b/development/terminalfour/src/html/includes/possible/master-your-future.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>master-your-future</h2>
+        <h2>Here, you can master your future.</h2>
+        <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+        <p>Advance your community – and your career – with an advanced degree in a critical Colorado field.</p>
       </div>
     </div>
   </div>
