--- a/development/terminalfour/src/html/includes/possible/multiply-your-roi.html
+++ b/development/terminalfour/src/html/includes/possible/multiply-your-roi.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Multiply your ROI.</h2>
-        <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.
+        <h2>Best ROI in the business.</h2>
+        <h3>As the best-value business college in Colorado, we offer a startup spirit and the only sales center in the state – backed up by an international accreditation.
         </h3>
 
-        <h3>That’s possible here.</h3>
+        <p>Buy your parents a house while putting yourself through college. Leave homelessness behind to open your own brewery. Buy a franchise with winnings from a national entrepreneur contest. Fulfill the American Dream.</p>
       </div>
     </div>
   </div>
