--- a/www-root/includes/possible/brewing-innovation-in-hospitality.html
+++ b/www-root/includes/possible/brewing-innovation-in-hospitality.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>brewing-innovation-in-hospitality</h2>
+        <h2>Brewing innovation at our School of Hospitality.</h2>
+        <h3>Hands-on experience at Colorado’s only on-campus hotel, brewery and wine-cellar management lab.</h3>
+        <p>Leading the next generation of hospitality?</p>
       </div>
     </div>
   </div>
