--- a/www-root/includes/possible/improving-health-in-colorado.html
+++ b/www-root/includes/possible/improving-health-in-colorado.html
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>improving-health-in-colorado</h2>
+        <h2>A prescription for improving health in Colorado.</h2>
+        <h3>Our new Health Institute integrates 10 disciplines to improve lives, communities and careers.</h3>
+        <p>Leading the way in the transformative field of lifestyle medicine. 
+          Developing applied opportunities with partners like Denver Health to empower tomorrow’s wellness leaders.
+          Helping underserved populations navigate access to health care across the state.</p>
       </div>
     </div>
   </div>
