--- a/www-root/includes/possible/operating-satelites-from-the-classroom.html
+++ b/www-root/includes/possible/operating-satelites-from-the-classroom.html
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>operating-satelites-from-the-classroom</h2>
+        <h2>We’re operating satellites from the classroom.</h2>
+        <h3>Innovative partnerships with leading aerospace companies and hands-on opportunities to launch space-related careers.</h3>
+        <p>The Final Frontier? Metropolitan State University of Denver’s Aerospace Science program is already there.
+
+            Our Aerospace Science students design batteries for small spacecraft, assist researchers protecting the planet from asteroid strikes and improve the efficiency with which major defense contractors build satellites.</p>
       </div>
     </div>
   </div>
