--- a/www-root/includes/possible/teaching-tomorrows-teachers.html
+++ b/www-root/includes/possible/teaching-tomorrows-teachers.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>teaching-tomorrows-teachers</h2>
+        <h2>Teaching tomorrow’s teachers.</h2>
+        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children</h3>
+        <p>Teacher education isn’t theoretical at MSU Denver – 95% of our education faculty were teachers themselves and know what it takes for teachers (and students!) to succeed in schools.</p>
       </div>
     </div>
   </div>
