--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -94,7 +94,7 @@ section {
   padding: 0 12px 5px;
 }
 
-.start_your_possible {
+.blue-background {
   padding-top: 15vh;
   background-color: #00447c;
   padding-bottom: 15vh;
@@ -107,11 +107,11 @@ section {
   -o-background-size: cover;
   background-size: cover;
 }
-.start_your_possible h2 {
+.blue-background h2 {
   margin: 15px 0;
   color: #fff;
 }
-.start_your_possible p {
+.blue-background p {
   color: #fff;
 }
 
@@ -242,6 +242,54 @@ button, [type="button"],
   width: 260px;
 }
 
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+}
 @media only screen and (max-width: 543px) {
   .modal-dialog {
     max-width: 100vw;
