adds copy for teaching

--- a/development/terminalfour/src/html/includes/possible/master-your-future.html
+++ b/development/terminalfour/src/html/includes/possible/master-your-future.html
@@ -4,6 +4,7 @@
       <div class="col-xs-12">
         <h2>Here, you can master your future.</h2>
         <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+        <img class="img-thumbnail" style="float:left;" src="style-assets/media/possible/MockTrial.jpg">
         <p>Advance your community – and your career – with an advanced degree in a critical Colorado field.</p>
       </div>
     </div>
