--- a/development/terminalfour/src/html/includes/possible/start-your-possible.html
+++ b/development/terminalfour/src/html/includes/possible/start-your-possible.html
@@ -5,8 +5,8 @@
         <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
 
         <select>
-          <option value="Reimagine higher education">Reimagine higher education</option>
-          <option value="Learners connect with leaders">Learners connect with leaders</option>
+          <option href="#reimagine-higher-education value=" Reimagine higher education">Reimagine higher education</option>
+          <option href="#learners-connect-with-leaders" value="Learners connect with leaders">Learners connect with leaders</option>
         </select>
       </div>
     </div>
