--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -110,6 +110,7 @@ section {
 .blue-background h2 {
   margin: 15px 0;
   color: #fff;
+  margin-bottom: 30px;
 }
 .blue-background p {
   color: #fff;
