--- a/development/terminalfour/src/html/includes/possible/teaching-tomorrows-teachers.html
+++ b/development/terminalfour/src/html/includes/possible/teaching-tomorrows-teachers.html
@@ -1,7 +1,7 @@
-<section id="teaching-tomorrows-teachers">
+<section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="well col-xs-12">
         <h2>Teaching tomorrow’s teachers.</h2>
         <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
         <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance in your career? Want to
