--- a/www-root/includes/possible/improving-health-in-colorado.html
+++ b/www-root/includes/possible/improving-health-in-colorado.html
@@ -1,12 +1,13 @@
-<section id="improving-health-in-colorado">
+<section id="improving-health-in-colorado" class="health-in-colorado">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-8 offset-md-5 well">
         <h2>A prescription for improving health in Colorado.</h2>
         <h3>Our new Health Institute integrates 10 disciplines to improve lives, communities and careers.</h3>
-        <p>Leading the way in the transformative field of lifestyle medicine. 
-          Developing applied opportunities with partners like Denver Health to empower tomorrow’s wellness leaders.
-          Helping underserved populations navigate access to health care across the state.</p>
+        <p>Help underserved populations navigate <a href="https://red.msudenver.edu/2018/navigating-the-future-of-patient-care.html">access to health care</a>. Lead the way in the <a
+            href="https://red.msudenver.edu/2019/healing-in-two-worlds.html">transformative field of lifestyle medicine</a>. <a href="https://red.msudenver.edu/2017/who-gets-to-be-a-doctor.html">Learn through experience</a> at some of the state’s top
+          health organizations. The road to health leadership and
+          personal wellness runs through MSU Denver.</p>
       </div>
     </div>
   </div>
