--- a/www-root/includes/possible/start-your-possible.html
+++ b/www-root/includes/possible/start-your-possible.html
@@ -3,50 +3,52 @@
     <div class="row">
       <div class="col-xs-12 col-md-10 offset-md-1">
         <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
-
-        <select>
-          <option href="#reimagine-higher-education value=" Reimagine higher education">Reimagine higher education</option>
-          <option href="#learners-connect-with-leaders" value="Learners connect with leaders">Learners connect with leaders</option>
-        </select>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-md-10 offset-md-1">
+        <a href="#reimagine-higher-education">
+          <btn class="btn">Reimagine higher education</btn>
+        </a>
+        <a href="#learners-connect-with-leaders">
+          <btn class="btn">Learners connect with leaders</btn>
+        </a>
+        <a href="#master-your-future">
+          <btn class="btn">Master your future</btn>
+        </a>
+        <a href="#on-the-front-lines-of-cybersecurity">
+          <btn class="btn">On the front lines of cybersecurity</btn>
+        </a>
+        <a href="#brewing-innovation-in-hospitality">
+          <btn class="btn">Brewing innovation in hospitality</btn>
+        </a>
+        <a href="#improving-health-in-colorado">
+          <btn class="btn">Improving health in Colorado</btn>
+        </a>
+        <a href="#teaching-tomorrows-teachers">
+          <btn class="btn">Teaching tomorrow’s teachers</btn>
+        </a>
+        <a href="#operating-satelites-from-the-classroom">
+          <btn class="btn">Operating satellites from the classroom</btn>
+        </a>
+        <a href="#multiply-your-roi">
+          <btn class="btn">Multiply your ROI</btn>
+        </a>
+        <a href="#saving-endangered-languages">
+          <btn class="btn">Saving endangered languages</btn>
+        </a>
       </div>
     </div>
   </div>
 
 </section>
-
+<!--
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <a href="#reimagine-higher-education">
-        <btn class="btn">Reimagine higher education</btn>
-      </a>
-      <a href="#learners-connect-with-leaders">
-        <btn class="btn">Learners connect with leaders</btn>
-      </a>
-      <a href="#master-your-future">
-        <btn class="btn">Master your future</btn>
-      </a>
-      <a href="#on-the-front-lines-of-cybersecurity">
-        <btn class="btn">On the front lines of cybersecurity</btn>
-      </a>
-      <a href="#brewing-innovation-in-hospitality">
-        <btn class="btn">Brewing innovation in hospitality</btn>
-      </a>
-      <a href="#improving-health-in-colorado">
-        <btn class="btn">Improving health in Colorado</btn>
-      </a>
-      <a href="#teaching-tomorrows-teachers">
-        <btn class="btn">Teaching tomorrow’s teachers</btn>
-      </a>
-      <a href="#operating-satelites-from-the-classroom">
-        <btn class="btn">Operating satellites from the classroom</btn>
-      </a>
-      <a href="#multiply-your-roi">
-        <btn class="btn">Multiply your ROI</btn>
-      </a>
-      <a href="#saving-endangered-languages">
-        <btn class="btn">Saving endangered languages</btn>
-      </a>
+
     </div>
   </div>
-</div>
+</div> -->
