creates new styles for master program

--- a/development/terminalfour/src/html/includes/possible/start-your-possible.html
+++ b/development/terminalfour/src/html/includes/possible/start-your-possible.html
@@ -1,4 +1,4 @@
-<section class="blue-background" id="start">
+<section class="blue-background" id="start" style="height:100vh;">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-10 offset-md-1">
@@ -9,46 +9,39 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-md-10 offset-md-1">
+        <a href="#improving-health-in-colorado">
+          <btn class="btn col-xs-12 col-md-5">Improving health in Colorado</btn>
+        </a>
+
         <a href="#reimagine-higher-education">
-          <btn class="btn">Reimagine higher education</btn>
+          <btn class="btn col-xs-12 col-md-5">Reimagine higher education</btn>
         </a>
         <a href="#learners-connect-with-leaders">
-          <btn class="btn">Learners connect with leaders</btn>
+          <btn class="btn col-xs-12 col-md-5">Learners connect with leaders</btn>
         </a>
         <a href="#master-your-future">
-          <btn class="btn">Master your future</btn>
+          <btn class="btn col-xs-12 col-md-5">Master your future</btn>
         </a>
-        <a href="#on-the-front-lines-of-cybersecurity">
+        <!-- <a href="#on-the-front-lines-of-cybersecurity">
           <btn class="btn">On the front lines of cybersecurity</btn>
-        </a>
-        <a href="#brewing-innovation-in-hospitality">
+        </a> -->
+        <!-- <a href="#brewing-innovation-in-hospitality">
           <btn class="btn">Brewing innovation in hospitality</btn>
-        </a>
-        <a href="#improving-health-in-colorado">
-          <btn class="btn">Improving health in Colorado</btn>
-        </a>
+        </a> -->
+
         <a href="#teaching-tomorrows-teachers">
-          <btn class="btn">Teaching tomorrow’s teachers</btn>
+          <btn class="btn col-xs-12 col-md-5">Teaching tomorrow’s teachers</btn>
         </a>
-        <a href="#operating-satelites-from-the-classroom">
+        <!-- <a href="#operating-satelites-from-the-classroom">
           <btn class="btn">Operating satellites from the classroom</btn>
-        </a>
-        <a href="#multiply-your-roi">
+        </a> -->
+        <!-- <a href="#multiply-your-roi">
           <btn class="btn">Multiply your ROI</btn>
-        </a>
-        <a href="#saving-endangered-languages">
+        </a> -->
+        <!-- <a href="#saving-endangered-languages">
           <btn class="btn">Saving endangered languages</btn>
-        </a>
+        </a> -->
       </div>
     </div>
   </div>
-
 </section>
-<!--
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-md-12">
-
-    </div>
-  </div>
-</div> -->
