--- a/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
+++ b/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
@@ -1,29 +1,28 @@
 <div class='navbar-wrapper' style="display: none;">
-    <nav id="navbar-possible" class="navbar">
-        <h2>Are you ready to find your <span class='possible-word'>possible</span> </h2>
-        <ul class="nav nav-pills">
-            <li class="nav-item dropdown">
-                <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
-                    <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-                    <a class="dropdown-item" href="#master-your-future">Master your future</a>
-                    <a class="dropdown-item" href="#on-the-front-lines-of-cybersecurity">On the front lines of cybersecurity</a>
-                    <a class="dropdown-item" href="#brewing-innovation-in-hospitality">Brewing innovation in hospitality</a>
-                    <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
-                    <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
-                    <a class="dropdown-item" href="#operating-satelites-from-the-classroom">Operating satellites from the classroom</a>
-                    <a class="dropdown-item" href="#multiply-your-roi">Multiply your ROI</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                </div>
-            </li>
-        </ul>
-    </nav>
+  <nav id="navbar-possible" class="navbar">
+    <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
+    <ul class="nav nav-pills">
+      <li class="nav-item dropdown">
+        <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
+          <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+          <a class="dropdown-item" href="#master-your-future">Master your future</a>
+          <!-- <a class="dropdown-item" href="#on-the-front-lines-of-cybersecurity">On the front lines of cybersecurity</a> -->
+          <!-- <a class="dropdown-item" href="#brewing-innovation-in-hospitality">Brewing innovation in hospitality</a> -->
+          <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
+          <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
+          <!-- <a class="dropdown-item" href="#operating-satelites-from-the-classroom">Operating satellites from the classroom</a> -->
+          <!-- <a class="dropdown-item" href="#multiply-your-roi">Multiply your ROI</a> -->
+        </div>
+      </li>
+    </ul>
+  </nav>
 </div>
 
 
 <style>
-.navbar {
+  .navbar {
     position: fixed;
     top: 0px;
 
@@ -31,39 +30,39 @@
     z-index: 999;
 
     width: 100%;
-}
-  
-.navbar > h2 {
+  }
+
+  .navbar>h2 {
     margin: 15px 0;
     color: #fff;
-}
-  
-.navbar > p {
+  }
+
+  .navbar>p {
     color: #fff;
-}
+  }
 </style>
 
 
 <script>
-const possibleSwitcher = el => {
-	const scroll = window.scrollY || window.pageYOffset
-	const boundsTop = el.getBoundingClientRect().top + scroll
-	
-	const viewport = {
-		top: scroll,
-		bottom: scroll + window.innerHeight,
-	}
-	
-    const bounds = {
-		top: boundsTop,
-		bottom: boundsTop + el.clientHeight,
-	}
-	
-	return ( bounds.bottom >= viewport.top && bounds.bottom <= viewport.bottom ) 
-		|| ( bounds.top <= viewport.bottom && bounds.top >= viewport.top );
-}
+  const possibleSwitcher = el => {
+    const scroll = window.scrollY || window.pageYOffset
+    const boundsTop = el.getBoundingClientRect().top + scroll
 
-document.addEventListener('DOMContentLoaded', () => {
+    const viewport = {
+      top: scroll,
+      bottom: scroll + window.innerHeight,
+    }
+
+    const bounds = {
+      top: boundsTop,
+      bottom: boundsTop + el.clientHeight,
+    }
+
+    return (bounds.bottom >= viewport.top && bounds.bottom <= viewport.bottom) ||
+      (bounds.top <= viewport.bottom && bounds.top >= viewport.top);
+  }
+
+  document.addEventListener('DOMContentLoaded', () => {
     const rhe = document.getElementById('reimagine-higher-education')
     const lcl = document.getElementById('learners-connect-with-leaders')
     const myf = document.getElementById('master-your-future')
@@ -76,45 +75,33 @@ document.addEventListener('DOMContentLoaded', () => {
     const label = document.getElementById('nav-showing')
 
 
-    const handler = () => raf( () => {
-        if(possibleSwitcher(ihic)){
-            label.innerHTML='Improving health in Colorado'
-            $('.navbar-wrapper').fadeIn()
-        }
-
-        else if(possibleSwitcher(rhe)){
-            label.innerHTML='Reimagine higher education'
-
-
-        }
-        else if(possibleSwitcher(myf)){
-            label.innerHTML='Master your future'
-        }
-        else if(possibleSwitcher(ttt)){
-            label.innerHTML="Teaching tomorrow's teachers"
-        }
-
-        else if(possibleSwitcher(lcl)){
-            label.innerHTML='Learners connect with leaders'
-            $('.navbar-wrapper').fadeIn()
-        }
-
-        else {
-            $('.navbar-wrapper').fadeOut()
-        }
+    const handler = () => raf(() => {
+      if (possibleSwitcher(ihic)) {
+        label.innerHTML = 'Improving health in Colorado'
+        $('.navbar-wrapper').fadeIn()
+      } else if (possibleSwitcher(rhe)) {
+        label.innerHTML = 'Reimagine higher education'
+      } else if (possibleSwitcher(myf)) {
+        label.innerHTML = 'Master your future'
+      } else if (possibleSwitcher(ttt)) {
+        label.innerHTML = "Teaching tomorrow's teachers"
+      } else if (possibleSwitcher(lcl)) {
+        label.innerHTML = 'Learners connect with leaders'
+        $('.navbar-wrapper').fadeIn()
+      } else {
+        $('.navbar-wrapper').fadeOut()
+      }
     })
-    handler() 
+    handler()
     window.addEventListener('scroll', handler)
 
-})
+  })
 
-const raf = 
+  const raf =
     window.requestAnimationFrame ||
     window.webkitRequestAnimationFrame ||
     window.mozRequestAnimationFrame ||
     function(callback) {
-        window.setTimeout(callback, 1000/60)
+      window.setTimeout(callback, 1000 / 60)
     }
-
-
 </script>
