--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -31,6 +31,13 @@ h2 {
   font-weight: 700;
 }
 
+h3 {
+  // font-size: 1.75rem;
+  margin: 10px 0;
+  // font-weight: 700;
+  font-style: italic;
+}
+
 h4{
   color:#00447c;
   margin-bottom:15px;
@@ -43,6 +50,18 @@ p {
 p.copyright {
   font-size: 16px;
   text-align: right;
+}
+a{
+color: #092f6b;
+text-decoration: none;
+background-color: transparent;
+font-weight: 700;
+}
+
+a:hover{
+color: #092f6b;
+text-decoration: underline;
+font-weight: 700;
 }
 
 .copyright > a {
@@ -105,6 +124,7 @@ section {
   padding: 0 12px 5px;
 }
 
+
 .blue-background {
   padding-top: 15vh;
   background-color: #00447c;
@@ -122,6 +142,7 @@ section {
     margin: 15px 0;
     color: #fff;
     margin-bottom:30px;
+    text-align: center;
   }
 
   p {
@@ -133,7 +154,7 @@ section {
     color: #fff;
     font-size: 1.5rem;
     border-radius: 0;
-    margin: 15px 10px;
+    margin: 15px;
   }
 
   .btn:hover {
@@ -282,8 +303,38 @@ button, [type="button"],// 1
   -o-background-size: cover;
   background-size: cover;
 
-  .well { 
+  .well {
     background: #ffffffde;
+  }
+}
+
+#master-your-future{
+  padding-bottom: 20vh;
+  background-color: #D11242;
+  h2,h3{
+    color:white !important;
+    margin-bottom: 15px;
+  }
+  .copy-swap{
+    background: white;
+    p, a, a:hover{
+      color:#00447c;
+    }
+  }
+@media only screen and (min-width: 543px) {
+   .copy-swap {
+    margin-top: 35px;
+    // left: -90px;
+    margin-right: -75px;
+    z-index: 1;
+    background-color: white;
+    position: absolute;
+    padding:35px;
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.175);
+    p, a, a:hover{
+      color:#00447c !important;
+    }
+    }
   }
 }
 
