--- a/www-root/includes/possible/reimagine-higher-education.html
+++ b/www-root/includes/possible/reimagine-higher-education.html
@@ -6,10 +6,12 @@
     </h3>
     <div class="row">
       <div class="col-xs-12 col-md-6">
+        <p></p>
+        <p></p>
         <p>
           Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
           networks that jump-start careers. Just ask this “SportsCenter” anchor.</p>
-        <p style="margin-bottom:20px"> <strong>The possibilities are endless.</strong></p>
+        <p style="margin-bottom:20px; font-size:2rem;"> <strong>The possibilities are endless.</strong></p>
       </div>
       <div class="col-xs-12 col-md-6">
         <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
