--- a/www-root/includes/possible/reimagine-higher-education.html
+++ b/www-root/includes/possible/reimagine-higher-education.html
@@ -9,8 +9,10 @@
         <p></p>
         <p></p>
         <p>
-          Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
-          networks that jump-start careers. Just ask this “SportsCenter” anchor.</p>
+          Build and <a href="https://red.msudenver.edu/2018/students-contribute-to-next-generation-satellite-manufacturing-and-operation.html">operate satellites</a> at an innovative aerospace company. <a
+            href="https://red.msudenver.edu/2019/beer-here.html">Make beer</a> at a legendary brewery. Produce an
+          <a href="https://red.msudenver.edu/2018/this-just-in-students-tv-job-a-dream-come-true.html">Emmy-winning newscast</a>. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
+          networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
         <p style="margin-bottom:20px; font-size:2rem;"> <strong>The possibilities are endless.</strong></p>
       </div>
       <div class="col-xs-12 col-md-6">
