--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -104,10 +104,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   color: #002855;
-  font-size: 26px;
-  line-height: 26px;
-  margin: 20px 0;
-  padding: 40px 0;
+  font-size: 2.2rem;
+  // line-height: 26px;
+  margin: 40px 0;
+  // padding: 40px 0;
 }
 .readmore {
   text-align: right;
