navbar updates dropdown item and hides when at top block

--- a/development/terminalfour/src/html/includes/possible/introduction.html
+++ b/development/terminalfour/src/html/includes/possible/introduction.html
@@ -1,4 +1,4 @@
-<section class="introduction">
+<section class="introduction" id="introduction">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12">
