--- a/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
+++ b/development/terminalfour/src/html/includes/possible/dropdown-navbar.html
@@ -1,34 +1,35 @@
-<nav id="navbar-possible" class="navbar navbar-fixed-top">
-  <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
-  <ul class="nav nav-pills">
-    <li class="nav-item">
-        <a class="nav-link" href="#reimagine-higher-education">Reimagine higher education</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#master-your-future">Master your future</a>
-    </li>
-    <!-- <li class="nav-item dropdown">
-      <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
-        <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-        <a class="dropdown-item" href="#master-your-future">Master your future</a>
+<div class="navbar-wrapper" style="display: none;">
+  <nav id="navbar-possible" class="navbar navbar-fixed-top">
+    <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
+    <ul class="nav nav-pills">
+      <!-- <li class="nav-item" hidden>
+          <a class="nav-link" href="#reimagine-higher-education">Reimagine higher education</a>
+      </li>
+      <li class="nav-item" hidden>
+          <a class="nav-link" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+      </li>
+      <li class="nav-item" hidden>
+          <a class="nav-link" href="#master-your-future">Master your future</a>
+      </li> -->
+      <li class="nav-item dropdown">
+        <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
+          <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+          <a class="dropdown-item" href="#master-your-future">Master your future</a>
+          <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
+          <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
+          <a class="dropdown-item" href="#introduction" hidden>Top</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+</div>
 
-        <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
-        <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
-
-      </div>
-    </li> -->
-  </ul>
-</nav>
 
 
 <style>
   .navbar {
-
     top: 0px;
 
     background-color: #00447c;
@@ -48,11 +49,20 @@
 </style>
 
 <script type="text/javascript">
-$(document).ready(function() {
-  $(window).on("activate.bs.scrollspy", function(){
-    const current = $(".nav li.active").text()
-    console.log("this is " + current)
 
-  })
+const droptext = document.getElementById('nav-showing')
+
+$(window).on("activate.bs.scrollspy", function(){
+  // const x = document.querySelectorAll('.nav-item, .active')
+  const x = document.querySelectorAll('a.dropdown-item.active')[0].innerText
+  console.log(x)
+  if(x == "Top")
+    $('.navbar-wrapper').fadeOut(150)
+  else {
+    $('.navbar-wrapper').fadeIn(150)
+    droptext.innerText = x
+  }
+    
 })
+
 </script>
