--- a/www-root/includes/possible/start-your-possible.html
+++ b/www-root/includes/possible/start-your-possible.html
@@ -29,9 +29,9 @@
           <btn class="btn">Brewing innovation in hospitality</btn>
         </a> -->
 
-        <a href="#teaching-tomorrows-teachers">
+        <!-- <a href="#teaching-tomorrows-teachers">
           <btn class="btn col-xs-12 col-md-5">Teaching tomorrow’s teachers</btn>
-        </a>
+        </a> -->
         <!-- <a href="#operating-satelites-from-the-classroom">
           <btn class="btn">Operating satellites from the classroom</btn>
         </a> -->
