added buttons to navbar, changed button style to fit color

--- a/development/terminalfour/src/sass/possible-partials/possible-navbar.scss
+++ b/development/terminalfour/src/sass/possible-partials/possible-navbar.scss
@@ -3,7 +3,7 @@
     top: 0px;
     display: block;
     
-    background-color: #00447c !important;
+    background-color: #00447c;
     z-index: 999;
     width: 100%;
 
