--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -1,15 +1,11 @@
 
 .HighlightBox {
-  color: #fff;
+  color: #000000;
   padding: 1.5em;
   margin-bottom: 1.5em;
   background: #ffffff;
   position: relative;
   border: 1px solid #869CBB;
-  // zoom: 1;
-  // -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-  // -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-  // box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05)
 }
 .HighlightBox .HighlightBox-title {
   color: #717073;
@@ -29,28 +25,8 @@
   margin: auto;
 }
 
-// .linkcolumn .HighlightBox {
-//   margin: 0 0 1em;
-//   background: #c0392b;
-//   zoom: 1
-// }
-// .linkcolumn .HighlightBox a {
-//   word-break: break-word
-// }
-// .ThreeColumnRight .HighlightBox {
-//   margin: 0 0 1em;
-//   background: #16a085
-// }
-// .ThreeColumnRight .HighlightBox .HighlightBox-title {
-//   color: #fff;
-//   font-size: 1.5em;
-//   text-align: center
-// }
-.HighlightBox .img-responsive {
-  margin: auto;
-}
 .ThreeColumnRight .HighlightBox, .ThreeColumnRight .HighlightBox .HighlightBox-content, .ThreeColumnRight .HighlightBox .HighlightBox-content a, .ThreeColumnRight .HighlightBox .HighlightBox-content a:hover, .ThreeColumnRight .HighlightBox a, .ThreeColumnRight .HighlightBox a:hover, .content .HighlightBox .HighlightBox-content, .content .HighlightBox .HighlightBox-content a, .content .HighlightBox .HighlightBox-content a:hover {
-  color: #fff
+  color: #000000
 }
 .HighlightBox hr {
   border: 0;
